# doctor-appointment-multiagent-system

./: .gitignore  README.md  agent.py  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
data/: doctor_availability.csv
data_models/: models.py
notebook/: multiagentsystem.ipynb
prompt_library/: prompt.py
toolkit/: toolkits.py
utils/: Clean_messages.py  llms.py
